# Forge

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/agents/: forge_agent.py
backend/app/api/routes/: auth.py  chat.py  projects.py  tools.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/db/: database.py  models.py  redis.py
backend/app/schemas/: api.py
backend/app/services/: model_router.py  rag.py
backend/app/tools/: sandbox.py  search.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/tests/: test_api.py
evals/: run.py
evals/datasets/: code_gen.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  railway.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  EmptyChat.tsx  MessageBubble.tsx  ThinkingIndicator.tsx
frontend/src/components/editor/: CodeEditor.tsx
frontend/src/components/features/: ConversationSearch.tsx  ExportChat.tsx  MessageActions.tsx  TokenUsage.tsx
frontend/src/components/layout/: HamburgerMenu.tsx  Sidebar.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  store.ts
infra/scripts/: setup.sh
(+2 files in other folders)
